# giac

./: .gitignore  Makefile  Makefile.am  Makefile.in  config.h.in  config.status  configure  configure.ac  libtool  mkmacx86  mkosx  xcas.nsi  xcas64.nsi  xcaswin.nsi
.github/workflows/: ci-sage.yml
check/: Makefile  TP00-sol.cas  TP00-sol.cas.out-archarmel-5  TP00-sol.cas.out-archi386-4  TP00-sol.cas.out-arm64-6  TP00-sol.cas.out1  TP02-sol.cas  TP09-sol.cas  TP11-sol.cas  TP11.tst  TP12-sol.cas  TP12-sol.cas.out1  TP18-sol.cas  TP18-sol.cas.out1  TP18.tst  TP19-sol.cas  TP21-sol.cas.out1  integrate.out  intindt.out  testgeo
debian/: Makefile  apply-patches.sh  changelog  control  copyright  libgiac0t64.lintian-overrides  rules
debian/patches/: additional_test_files_for_other_arch.patch  alter_test_files_for_other_arch.patch  d-dont-build-files-excluded.patch  d-dont-include-remote-scripts.patch  d-find-doc-files-at-buildtime.patch  dont-bg-hevea.patch  drop_fr_doc.patch  fix-string-compiler-error.patch  fix_implicit_declaration.patch  series  (+1 more)
debianold/: Makefile  changelog
doc/: Makefile  Makefile.am  Makefile.in  aide_cas  algolycee.html  castex.tex  giac.tex  giacfr.tex  khi110ab.tar  khi110b.tar  khi120ab.tar  khi120b.tar  khi92.tar  khicas.nwa  khicasnw.html  longhelp_en.js  numworks.js  nws.css  nws.html  nws.js  nws_en.html  nws_sig.js  qrcode.js  sector18  sector19  send18  send19  service-worker.js  shakeys  test.html  testfr.tex  xcas.js  xcasen.html  xcasfr.html
examples/: Makefile
intl/: Makefile
micropython-1.12/: Makefile
po/: ChangeLog  Makevars  de.gmo  de.po  el.gmo  el.po  en.gmo  en.po  es.gmo  es.po  fr.gmo  fr.po  giac.pot  it.po  pt.gmo  pt.po  zh.gmo  zh.po
src/: Cfg.cc  Cfg.h  Editeur.cc  Editeur.h  Equation.cc  Graph.cc  Graph.h  Graph3d.cc  History.cc  History.h  Input.cc  Makefile  Makefile.am  Makefile.in  Makefile.mingw64  Makefile.numworks.simulator  Print.cc  README.mingw64  Tableur.cc  Xcas1.cc  Xcas1.h  aspen_translate.h  config.h  fenv.h  gen.cc  giac.i  giacintl.h  global.cc  graphe.h  help.cc  hist.cxx  hist.fl  hist.h  hist.menus  icas.cc  ifactor.cc  input_parser.yy  lexer.h  lexer_tab_int.h  luabridge.cc  (+9 more)
(+1163 files in other folders)
